--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Le jeu n'est pas terminé, il manque quelques flèches et des projections à placer
 
 Bug : en fonction de l'endianess, le jeu fonctionnera ou crashera...
 
-![Rubik](https://github.com/pouet/rubik/rubik.png)
+![Rubik](https://github.com/pouet/rubik/blob/master/rubik.png)
